# COVID-VaccinesSocialNorms

./: .gitignore  .lintr  LICENSE  LICENSE.md  Makefile  README.md  pyproject.toml
data/: ABOUT_SURVEY_5.md  BROW0016_OUTPUT_20220207.csv  TPL_Testing_Survey_FifthWave_YouGov_MERGEDWITHFOURTHWAVEFORMESSING.csv  find_duplicate_ids.R  outcome_analysis_study1_first_data.csv  outcome_analysis_study1_first_data.sav  outcome_analysis_study2_data.csv  outcome_analysis_study2_data.sav  study1_dat_plus_matches_dat3.csv  study1_dat_plus_matches_dat5.csv
src/R/: 000_constants_and_utils.R  005_make_id_crosswalk.R  010_create_matched_design_study1.R  011_do_matching_study1.R  020_create_matched_design_study2.R  030_outcome_analysis_study1.R  031_do_outcome_analysis_study1.R  032_outcome_analysis_study2.R  060_risk_perc_table_study1.R  061_risk_perc_table_study2.R  062_study1_circle_plot.R  063_study1_coefplot_fig.R  064_study2_circle_plot.R  066_tables.R  999_find_duplicate_ids.R  README.md  extract_post_matching_data.R  outcome_analysis_study1.R  outcome_analysis_study2.R  results_study1.Rmd  results_study1_first.Rmd  results_study1_last.Rmd  results_study2.Rmd  risk_perc_table_study1.R  rmd_setup.R  study1_circle_plot.R  study1_coefplot_fig.R  study1_coefs.csv  study2_coefplot_fig.R  study2_coefs.csv  tables.R
src/SPSS/: README.md  SUPPLEMENTARY_MATERIALS.sps  descriptive_statistics_for_study_1.sps  descriptive_statistics_for_study_2.sps  testing_the_false_consensus_predictions.sps
src/notebooks/: explore_duplicates.ipynb
src/tplutils/: cli.py  json_to_dot.py  (+1 more)
