[tool.poetry]
name = "covid-vaccinessocialnorms-private"
version = "0.1.0"
description = ""
authors = ["Kevin Wilson <khwilson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
jupyter = "^1.0.0"
numpy = "^1.22.2"
seaborn = "^0.11.2"
pandas = "^1.4.1"
geopandas = "^0.10.2"
Rtree = "^0.9.7"
pyarrow = "^7.0.0"
statsmodels = "^0.13.2"
scipy = "^1.8.0"
pyreadstat = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
